<resources>
    <string name="app_name">BuffStuff</string>
    <string name="user_login">Login</string>
    <string name="user_signup">Sign Up</string>
    <string name="login_email">CU Email</string>
    <string name="login_password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="password_reset"><u>reset password?</u></string>
    <string name="new_user"><u>new user?</u></string>
    <string name="returning_user"><u>already a user?</u></string>
    <string name="sell">Sell A New Item</string>
    <string-array name="condition_array">
        <item>Select One</item>
        <item>Poor</item>
        <item>Acceptable</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string-array name="category_array">
        <item>Select One</item>
        <item>Textbook</item>
        <item>Furniture</item>
        <item>Electronic</item>
        <item>Other</item>
    </string-array>
</resources>